--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class = "container">
+        <div class = "picture_frame">
+            <div class = "picture_one"></div>
+            <div class = "picture_two"></div>
+            <div class = "picture_three"></div>
+        </div>
+        <button class = "prev_arrow">&#10094;</button>
+        <button class = "next_arrow">&#10095;</button>
+        <div class = "dots">
+            <div class = "dot_1"></div>
+            <div class = "dot_2"></div>
+            <div class = "dot_3"></div>
+        </div>
+    </div>
 </body>
 </html>
