--- a/src/template.html
+++ b/src/template.html
@@ -15,9 +15,9 @@
         <button class = "prev_arrow">&#10094;</button>
         <button class = "next_arrow">&#10095;</button>
         <div class = "dots">
-            <div class = "dot_1"></div>
-            <div class = "dot_2"></div>
-            <div class = "dot_3"></div>
+            <div class = "dot_one" data-name = "dot_one"></div>
+            <div class = "dot_two" data-name = "dot_two"></div>
+            <div class = "dot_three" data-name = "dot_three"></div>
         </div>
     </div>
 </body>
